--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                               data-parent="#accordionExample1">
                               <div class="card-body">
                                 <button id="taipei" type="button" class="btn btn-outline-primary btn-block">臺北 <span
-                                    class="badge badge-danger badge-pill">4</span></button>
+                                    class="badge badge-danger badge-pill">5</span></button>
                               </div>
                             </div>
                           </div>
@@ -311,7 +311,7 @@
                 var eat = document.getElementById("eat")
                 var play = document.getElementById("play")
                 sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)"
-                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店"
+                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)"
                 play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城"
                 taipai_btn.onclick = function () {
                   sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)"
