--- a/timeline/index.html
+++ b/timeline/index.html
@@ -142,7 +142,33 @@
            <p>後來帶你去運動公園散散心，風真的很大很冷呢，快穿上我的醜醜外套吧 :D 雖然醜 但有我滿滿的溫暖喔!</p>
         </div>
       </div> 
- 
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        	<div class="timeline-img-header"><img src='img/10.jpg' width=100% height=200>
+          	<h2 class="title">Hi10! 淡水 五個月快樂</h2>
+        	</div>
+        	<div class="date">20201013</div>
+            <p>你終於面試完了！知道你有上中央真的很替你感到高興 讚喔</p>
+            <p>禮拜五跟阿智吃完起家雞 冒著風雨騎到高鐵站 真的是快要死掉了欸😀</p>
+            <p>很晚才到你宿舍 果然跟我大學時的宿舍差不多呢～</p>
+            <p>禮拜六我們稍微逛了一下你的校園 吃了香豆腐 然後買了火鍋料跟肉片～終於要在你家煮火鍋了  爽喔</p>
+            <p>真的很好吃欸 紅蔥醬買對了 只是沒有用冰箱冰真的可以嗎😃 </p>
+            <p>以後請繼續煮給我吃 我可以洗碗</p>
+            <p>然後我們晚上一起讀書 你還一直偷懶跑過來 一直睡覺 又沒去士林夜市溜 還熬夜打電動 一直過不了26000的挖金礦 跟過不了第四關的超級瑪莉😀</p>
+            <p>怎麼時間過的這麼快啊 馬上就要回去了 星期日依照慣例一直在睡覺 還懶惰叫foodpanda </p>
+            <p>然後我們就一直睡覺 到下午 騎iRent 到淡水老街買鐵蛋跟魚酥 </p>
+            <p>iRent 一直找不到停車位 我說話又變大聲了 抱券</p>
+            <p>最後搭車的事情又惹你生氣了😀 大戶屋都沒味道了</p>
+            <p>五個月氣爆😔</p>
+            <p>剛剛在車站不小心沙子進到眼睛了，覺得怎麼才一下下 就要走了 不是才剛來嗎😭下次不要一直睡覺啦😀😀</p>
+            <br>
+        </div>
+      </div>     
+
+
+
           
     </div>
   </section>
