--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -167,6 +167,35 @@
         </div>
       </div>     
 
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        	<div class="timeline-img-header"><img src='img/11.jpg' width=100% height=200>
+          	<h2 class="title">Hi12! 淡水</h2>
+        	</div>
+          <div class="date">20201219</div>
+              <p>這次因為出差上來找你</p>
+              <p>會議很快就結束了！</p>
+              <p>馬上就搭公車來找你溜😀😀</p>
+              <p>然後我們馬上就訂了food panda吃披薩溜😀</p>
+              <p>晚上逛了一下淡水</p>
+              <p>看到你的秘密基地 還有很大隻的老鼠</p>
+              <p>跟你聊天的感覺真的很舒服😀</p>
+              <p>然後玩了很多刮刮樂 跟花了很多錢夾鴨子</p>
+              <p>最後irent還被取消資格😀</p>
+              <p>真的超衰的欸，但是有你在我身邊</p>
+              <p>我覺得我是最幸運的</p>
+              <p>第二天我們去吃了黑殿 店員說 要不要點中份的 怕女生吃不完😀</p>
+              <p>怎麼可能 他可是博英欸 來兩份大份的啦</p>
+              <p>後來又逛了淡水 看海 幫狗狗還有小孩取名字 騎腳踏車，是個很peaceful的一天呦</p>
+              <p>最後以西門町辣死人不償命的麻辣香鍋做為收場</p>
+              <p>回過神後 又要回家了</p>
+              <p>下禮拜就見面了！下禮拜快點來！</p>
+            <br>
+        </div>
+      </div>     
+
+
 
 
           
