--- a/just_love/index.html
+++ b/just_love/index.html
@@ -311,12 +311,12 @@
                 var eat = document.getElementById("eat")
                 var play = document.getElementById("play")
                 sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)"
-                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)"
-                play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城"
+                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/西門町夠嗆麻辣香鍋"
+                play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/西門町"
                 taipai_btn.onclick = function () {
                   sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)"
-                  eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店"
-                  play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城"
+                  eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/西門町夠嗆麻辣香鍋"
+                  play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/西門町"
                 }
                 chiayi_btn.onclick = function () {
                   sleep.innerHTML = " "
