--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -171,6 +171,45 @@
         <div class="timeline-img"></div>
         <div class="timeline-content timeline-card js--fadeInLeft">
         	<div class="timeline-img-header"><img src='img/11.jpg' width=100% height=200>
+          	<h2 class="title">Hi11! 台北</h2>
+        	</div>
+        	<div class="date">20201205</div>
+            <p>20201205 Hi11 台北</p>
+            <p>終於見面了！</p>
+            <p>這次刮刮樂竟然中獎了 1600爽啦 還吃了披薩跟炸雞 讚喔</p>
+            <p>時間還是過好快 一下就要回家了😭</p>
+            <p>這次去了上次沒去的袖珍博物館</p>
+            <p>跟想像中的差滿多的😀 但還是好玩啦,有些真的蠻厲害的</p>
+            <p>這次我們還滿多時間都在聊天的😀開心呦😀😀</p>
+            <p>喜歡在公園裡 邊踏步邊跟你聊天的感覺 還有騎iRent 載你 在路易莎看聊天記錄👀 最後在車站彼此給皮筋的祝福 我都很開心喔😀 期待下次見面喔😀 還有要謝謝你的蛋捲🐹🐹</p>
+            <br>
+        </div>
+      </div>    
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content js--fadeInRight">
+          <h1>六個月快樂!</h1>
+       		<div class="date">20201215</div>
+           <p>時間真的過的很快欸</p>
+           <p>看看第一次見面的我們</p>
+           <p>你越來越可愛了🐹</p>
+           <p>我的臉也越來越腫了😀</p>
+           <p>這半年謝謝你的陪伴</p>
+           <p>往後請繼續指教</p>
+           <p>不要一直跟我吵架啦 葡萄葡萄</p>
+           <p>雖然我有時候真的很白目</p>
+           <p>講話都沒有先想一下</p>
+           <p>就被你討厭了😔</p>
+           <p>念在我這麼蟲的情況下 請原諒我啦😀</p>
+           <p>這禮拜就能見面溜😀 半年了 一定要逛到士林夜市😀😀😀</p>
+        </div>
+      </div> 
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        	<div class="timeline-img-header"><img src='img/12.jpg' width=100% height=200>
           	<h2 class="title">Hi12! 淡水</h2>
         	</div>
           <div class="date">20201219</div>
