--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -234,7 +234,42 @@
         </div>
       </div>     
 
-
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        	<div class="timeline-img-header"><img src='img/13.jpg' width=100% height=200>
+          	<h2 class="title">Hi13! 耶誕快樂</h2>
+        	</div>
+        	<div class="date">20201225</div>
+            <p>這次禮拜五就上去找你溜</p>
+            <p>帶著耶誕帽送禮物來了😀 是不是很丟臉呀</p>
+            <p>然後就跟阿智交換禮物 收到你送我的牌跟信很感動喔🥺
+            <p>禮拜六我們去了黑天鵝 你的畢展 覺得你的作品很讚喔，雖然最有印象的還是陳乃瑄😀不過你的作品真的是最讚的啦</p>
+            <p>你禮拜五晚上因為一個朋友的一句話而難過，覺得從小到大都很有好勝心，很想贏過人家，真的很阿呆啦，在我心中你早就贏了啦😀😀</p>
+            <p>然後我們就去吃了漢堡，還趁我去廁所時付了錢，還說是朋友😀不要騙人啦😀</p>
+            <p>後來你還去捐了血 還500！真的不會暈倒嗎😀😀 血流很快 應該算是健康吧！</p>
+            <p>然後我們就去吃果然匯溜 好吃好吃 但猴頭菇根本不像牛排啦😀</p>
+            <p>然後你耍笨沒帶眼鏡 我們就去買隱形眼鏡溜</p>
+            <p>回來時騎著irent,還有邊走邊聊天 我很喜歡當下的氛圍，雖然沒幹嘛 但就真的很舒服 讚呦👍</p>
+            <p>然後我們就去飯店的健身房運動了一下💪</p>
+            <p>隔天直接睡爆欸，起來吃完早餐後又回去睡，真的是太累了😀</p>
+            <p>然後去了中正紀念堂拍著 我真的越來越醜溜😀 怎麼拍都不好看🥲 但你很好看啦😀😀</p>
+            <p>接著就去吃鼎泰豐跟逛東門</p>
+            <p>還看到小日子在出清打折 直接買起來😀</p>
+            <p>超便宜的香水 讚呦😀</p>
+            <p>在逛時你問我 有什麼習慣是遇到你後改變的</p>
+            <p>我覺得應該是我變得不太貪玩了吧</p>
+            <p>跟脾氣也沒這麼急了</p>
+            <p>我以前常常因為個性很急 很愛碎念 而吵架</p>
+            <p>現在真的因為你 變的比較peace了😀</p>
+            <p>後來回北車時 被開單了😀😀</p>
+            <p>之前的我 應該會碎念吧</p>
+            <p>我這次其實有意識到 如果我又開始碎念的話 氛圍應該會變得很差吧 😀所以我就沒碎念溜😀 應該說也沒啥好碎念的啦</p>
+            <p>比起開單 我馬上就要走了 才比較難過吧😢😢</p>
+            <p>又要回去了 期待下次的見面😀不要忘記我溜😀</p>
+            <br>
+        </div>
+      </div>   
 
 
           
