--- a/just_love/index.html
+++ b/just_love/index.html
@@ -267,7 +267,7 @@
                               data-parent="#accordionExample1">
                               <div class="card-body">
                                 <button id="taipei" type="button" class="btn btn-outline-primary btn-block">臺北 <span
-                                    class="badge badge-danger badge-pill">7</span></button>
+                                    class="badge badge-danger badge-pill">8</span></button>
                               </div>
                             </div>
                           </div>
@@ -355,13 +355,13 @@
                 var sleep = document.getElementById("sleep")
                 var eat = document.getElementById("eat")
                 var play = document.getElementById("play")
-                sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)/燦路都"
-                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋"
-                play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町"
+                sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)/燦路都/天成大飯店"
+                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋/果然匯-明耀店/鼎泰豐-新生店/翰林茶館"
+                play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町/中正紀念堂"
                 taipai_btn.onclick = function () {
-                  sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)/燦路都 "
-                  eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋"
-                  play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町"
+                  sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)/燦路都/天成大飯店 "
+                  eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋/果然匯-明耀店/鼎泰豐-新生店/翰林茶館"
+                  play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町/中正紀念堂"
                 }
                 chiayi_btn.onclick = function () {
                   sleep.innerHTML = " "
