--- a/just_love/index.html
+++ b/just_love/index.html
@@ -188,11 +188,24 @@
             <!-- Swiper -->
     <div class="swiper-container1">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img width="100%" src="img/movie/0001.JPG"></div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0002.JPG"></div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0003.JPG"></div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0004.JPG"></div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0005.JPG"  style="border:5px red dashed;"></div>
+        <div class="swiper-slide"><img width="100%" src="img/movie/0001.JPG">
+          <div class="title text-center" data-swiper-parallax="0">2020</br>天能</div>
+        </div>
+        <div class="swiper-slide"><img width="100%" src="img/movie/0002.JPG">
+          <div class="title text-center" data-swiper-parallax="0">2020</br>歌喉戰</div>
+        </div>
+        <div class="swiper-slide"><img width="100%" src="img/movie/0003.JPG">
+          <div class="title text-center" data-swiper-parallax="0">2020</br>真愛每一天</div>
+        </div>
+        <div class="swiper-slide"><img width="100%" src="img/movie/0004.JPG">
+          <div class="title text-center" data-swiper-parallax="0">2020</br>大佛普拉斯</div>
+        </div>
+        <div class="swiper-slide"><img width="100%" src="img/movie/0005.JPG">
+          <div class="title text-center" data-swiper-parallax="0">2021/01/03</br>Death to 2020</div>
+        </div>
+        <div class="swiper-slide"><img width="100%" src="img/movie/0000.JPG"  style="border:5px red dashed;">
+          <div class="title text-center" data-swiper-parallax="0">待看</br>全面啟動</div>
+        </div>
       </div>
       <!-- Add Scrollbar -->
       <div class="swiper-scrollbar"></div>
