--- a/just_love/index.html
+++ b/just_love/index.html
@@ -444,6 +444,8 @@
             <hr class="star-dark mb-5">
             <div class="container">
               <iframe src="games/game01.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
+              <br>
+              <iframe src="mrt/index.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
             </div>
           </div>
         </div>
