--- a/mrt/index.html
+++ b/mrt/index.html
@@ -75,8 +75,8 @@
     <div class="w3-center">
       <p>點選按鈕隨機旅遊地點</p>
       <div class="w3-row">
-        <p>亂數基底  <input id="rand_base" value="30"></input></p>
-        <button id="btn_stop" class="w3-button w3-blue w3-round w3-black">手動停</button>
+        <p style="display:none">亂數基底  <input id="rand_base" value="30"></input></p>
+        <button style="display:none" id="btn_stop" class="w3-button w3-blue w3-round w3-black">手動停</button>
         <button id="btn_red" class="w3-button w3-blue w3-round w3-red">淡水信義線</button>
         <button id="btn_greed" class="w3-button w3-blue w3-round w3-green">松山新店線</button>
       </div>
