--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -272,6 +272,36 @@
       </div>   
 
 
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        	<div class="timeline-img-header"><img src='img/14.jpg' width=100% height=200>
+          	<h2 class="title">Hi14! 台中逢甲</h2>
+        	</div>
+          <div class="date">20210116</div>
+            <p>ㄏ一ㄡ 又見面溜😀</p>
+            <p>這次是來台中</p>
+            <p>又一起搭區間車溜 坐在對面用手機密你 真好玩😀</p>
+            <p>到了之後 先吃了放到冷掉的蛋餅 然後就租機車溜</p>
+            <p>租完機車我們就先去飯店 放行李囉</p>
+            <p>竟然是機器人飯店 雖然機器手臂不能用😀😀</p>
+            <p>然後就去吃雞排溜 我覺得普通 薯條沒番茄醬很失敗啦😀</p>
+            <p>接著就回飯店休息溜 房間真的滿小的 浴室也是</p>
+            <p>晚上我們就去吃韓式 逛逢甲夜市 還買了一堆保養品😀</p>
+            <p>回來時 發現早上空曠的地方 變成了奇怪的居酒屋 就坐一下溜</p>
+            <p>駐唱是大學生了沒的海產 還唱了陌生人 讚喔😀</p>
+            <p>隔天我們先去吃蚵子粥 然後玩bingo 你竟然中了500 讚喔😀😀</p>
+            <p>然後逛了動漫彩繪巷跟台中文學館 等了很久的咖啡 終於到了卻變了味 因為加了你的淚水🥲 抱券</p>
+            <p>之後你就一直跟我玩躲貓貓 抓不到你啦</p>
+            <p>你可以揍我啦 但不要把我推開啦</p>
+            <p>最後吃了定食八的壽喜燒 就搭車溜😩</p>
+            <p>時間過的真的好快 上一秒還在警察開單 怎麼 下一秒就要搭車了</p>
+            <p>希望下次見面時不要吵架🥲 我會很想你的！我很愛你喔！</p>
+            <br>
+        </div>
+      </div>     
+
+
           
     </div>
   </section>
