--- a/just_love/index.html
+++ b/just_love/index.html
@@ -404,7 +404,7 @@
                 taichung_btn.onclick = function () {
                   sleep.innerHTML = "浮雲客棧"
                   eat.innerHTML = "GangNam 首爾韓鍋/激旨燒き鳥/樂群街蚵仔粥/定食8-新時代店"
-                  play.innerHTML = "逢甲夜市/動漫彩繪巷/台中文學館"
+                  play.innerHTML = "逢甲夜市/動漫彩繪巷/台中文學館/台中文學公園"
                 }
               </script>
             </div>
