--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -331,6 +331,19 @@
         </div>
       </div>   
 
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content js--fadeInLeft">
+          <h1>Hi16! 苗栗</h1>
+       		<div class="date">20210317</div>
+           <p>你去清大繳資料!</p>
+           <p>然後來竹南找我一起吃個火鍋 就回去了</p>
+           <p>下禮拜就可以見面了!</p>
+           <p>不要一直難過拉 :D</p>
+        </div>
+      </div> 
+
           
     </div>
   </section>
