--- a/just_love/index.html
+++ b/just_love/index.html
@@ -46,9 +46,6 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">App區</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#movie">電影清單</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#timeline">時間軸&足跡</a>
           </li>
         </ul>
@@ -179,65 +176,6 @@
   </section>
 
 
-    <!-- Portfolio Grid Section -->
-    <section  id="movie">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">影片清單</h2>
-        <hr class="star-dark mb-5">
-
-            <!-- Swiper -->
-    <div class="swiper-container1">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img width="100%" src="img/movie/0001.JPG">
-          <div class="title text-center" data-swiper-parallax="0">2020</br>天能</div>
-        </div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0002.JPG">
-          <div class="title text-center" data-swiper-parallax="0">2020</br>歌喉戰</div>
-        </div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0003.JPG">
-          <div class="title text-center" data-swiper-parallax="0">2020</br>真愛每一天</div>
-        </div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0004.JPG">
-          <div class="title text-center" data-swiper-parallax="0">2020</br>大佛普拉斯</div>
-        </div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0005.JPG">
-          <div class="title text-center" data-swiper-parallax="0">2021/01/03</br>Death to 2020</div>
-        </div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0006.JPG">
-          <div class="title text-center" data-swiper-parallax="0">2021/01/05</br>無間道1~3</div>
-        </div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0007.JPG">
-          <div class="title text-center" data-swiper-parallax="0">2021/01/23</br>血觀音</div>
-        </div>
-        <div class="swiper-slide"><img width="100%" src="img/movie/0000.JPG"  style="border:5px red dashed;">
-          <div class="title text-center" data-swiper-parallax="0">待看</br>全面啟動</div>
-        </div>
-      </div>
-      <!-- Add Scrollbar -->
-      <div class="swiper-scrollbar"></div>
-    </div>
-    <!-- Swiper JS -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper('.swiper-container1', {
-        lazy: true,
-        loop: false,
-        slidesPerView: 5,
-        spaceBetween: 10,
-        scrollbar: {
-          el: '.swiper-scrollbar',
-          hide: true,
-        },
-        pagination: {
-          el: '.swiper-pagination',
-        },
-      });
-    </script>
-        
-      </div>
-    </section>
 
   <!-- timeline Section -->
   <section id="timeline">
@@ -286,7 +224,7 @@
                               data-parent="#accordionExample1">
                               <div class="card-body">
                                 <button id="taipei" type="button" class="btn btn-outline-primary btn-block">臺北 <span
-                                    class="badge badge-danger badge-pill">9</span></button>
+                                    class="badge badge-danger badge-pill">10</span></button>
                               </div>
                             </div>
                           </div>
@@ -381,12 +319,12 @@
                 var eat = document.getElementById("eat")
                 var play = document.getElementById("play")
                 sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)/燦路都/天成大飯店/神隱國度"
-                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋/果然匯-明耀店/鼎泰豐-新生店/翰林茶館/食不厭/一兆堂"
-                play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町/中正紀念堂/陰陽海/黃金博物館/黃金瀑布/不厭亭"
+                eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋/果然匯-明耀店/鼎泰豐-新生店/翰林茶館/食不厭/一兆堂/一個人的披薩/雞媚ㄦ炸雞專家/31冰淇淋（ Baskin Robbins) 京站北車店"
+                play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町/中正紀念堂/陰陽海/黃金博物館/黃金瀑布/不厭亭/士林夜市/沙崙海水域場/淡水湯姆熊"
                 taipai_btn.onclick = function () {
                   sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)/燦路都/天成大飯店/神隱國度"
-                  eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋/果然匯-明耀店/鼎泰豐-新生店/翰林茶館/食不厭/一兆堂"
-                  play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町/中正紀念堂/陰陽海/黃金博物館/黃金瀑布/不厭亭"
+                  eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店/大吉祥香豆富(淡江)/壽喜燒一丁二代目- 雙城店/黑殿/西門町夠嗆麻辣香鍋/果然匯-明耀店/鼎泰豐-新生店/翰林茶館/食不厭/一兆堂/一個人的披薩/雞媚ㄦ炸雞專家/31冰淇淋（ Baskin Robbins) 京站北車店"
+                  play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城/袖珍博物館/西門町/中正紀念堂/陰陽海/黃金博物館/黃金瀑布/不厭亭/士林夜市/沙崙海水域場/淡水湯姆熊"
                 }
                 chiayi_btn.onclick = function () {
                   sleep.innerHTML = " "
