--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -344,6 +344,48 @@
         </div>
       </div> 
 
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        	<div class="timeline-img-header"><img src='img/17.jpg' width=100% height=200>
+          	<h2 class="title">Hi17! 淡水</h2>
+        	</div>
+        	<div class="date">20210326</div>
+              <p>終於又見面了！這次禮拜五就去找你了！雖然很晚才到😀</p>
+              <p>我們去逛了一下士林夜市，跟我想的不太一樣欸 我以為是方方的那種😀</p>
+              <p>睽違了好幾個月 終於逛到了啦😀</p>
+              <p>吃了一些東西 我決定之後吃的東西我都要打分數😀</p>
+              <p>豪大雞排 75分</p>
+              <p>麻辣魚蛋 70分 好辣</p>
+              <p>柳橙汁 60分 太甜了</p>
+              <p>蔥捲肉串 0分😀</p>
+              <p>烤杏鮑菇 78分 阿姨很貼心</p>
+              <p>隔天我們去吃了一個人pizza 82分</p>
+              <p>然後去了沙崙海邊 沙子很好玩欸😀😀</p>
+              <p>回來你拖鞋壞掉了 都是我把你的鞋子埋到沙裡面害的啦😀</p>
+              <p>現在才知道有鞋子的我們是幸福的😃</p>
+              <p>回來吃了</p>
+              <p>烤肉 85 分</p>
+              <p>鍋燒意麵 80 分</p>
+              <p>然後就回你房間打慈善撲克王大賽溜</p>
+              <p>還吃了一點雞翅 82 分</p>
+              <p>後來我就睡著了 起來看到你在哭</p>
+              <p>真的嚇爛欸😀 趕快抱住你 不要哭了啦 我在你旁邊欸😀</p>
+              <p>然後又睡著溜 接著你就用頭髮一直用我 還笑的很恐怖😀 白目鬼😀</p>
+              <p>第三天我們找車位找了好久 你覺得我好可憐😀 我覺得很好笑啦😀 後來終於找到了</p>
+              <p>去吃了一下素食 78 分</p>
+              <p>玩了一下湯姆熊 機台一直壞掉 你心情又變差了😀 下次我去講啦</p>
+              <p>回北車溜 去吃了一下</p>
+              <p>31冰淇淋 80 分</p>
+              <p>跟我的情人節大餐 麻辣燙 99分 （不要得意忘形啦😀 論味道大概79分</p>
+              <p>就回家溜😞 馬上就要見面了啦！我會好好想你的</p>
+              <p>這次我覺得我們的感情更好了，你之前有問我我有什麼改變，我覺得我有在改我的脾氣，像是騎WeMo不小心被夾到 我都不敢說😀 還有找不到車位 也沒有碎念啦😀</p>
+              <p>我覺得我更怕你生氣了😀 我想要讓我們之間的氣氛可以很好啦😀 希望你快快樂樂的</p>
+              <p>不要一直生氣啦 又不是氣球😀</p>
+            <br>
+        </div>
+      </div>   
           
     </div>
   </section>
